unpackaged/main/default/objects/Knowledge__kav/fields/Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Article_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Id</label>
    <type>Text</type>
</CustomField>