unpackaged/main/default/objects/Knowledge__kav/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>The brand for the knowledge article.  Used to match knowledge articles with cases and to sort knowledge articles.</description>
    <inlineHelpText>The brand for the knowledge article.  Used to match knowledge articles with cases and to sort knowledge articles.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>True&amp;Co</fullName>
            </value>
            <value>
                <fullName>Tommy Hilfiger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>