unpackaged/main/default/objects/Knowledge__kav/fields/Parent_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Parent_Knowledge_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Child Articles</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>