unpackaged/main/default/objects/Knowledge__kav/fields/SEO_Additional_Detail__c.field-meta.xml
<CustomField>
    <fullName>SEO_Additional_Detail__c</fullName>
    <description>Use to add additional text for Title Tags in conjunction with existing Title &amp; Brand values</description>
    <inlineHelpText>Use to add additional text for Title Tags in conjunction with existing Title &amp; Brand values. Enter with pipe &quot;|&quot; space &quot; &quot; then text. Example &quot;| Preferred Loyalty Program&quot;</inlineHelpText>
    <label>SEO Additional Detail</label>
    <type>TextArea</type>
</CustomField>