unpackaged/main/default/objects/Knowledge__kav/recordTypes/CalvinKlein.recordType-meta.xml
<RecordType>
    <fullName>CalvinKlein</fullName>
    <active>true</active>
    <description>Used for Calvin Klein Articles</description>
    <label>Calvin Klein</label>
</RecordType>