unpackaged/main/default/objects/Knowledge__kav/recordTypes/Informational_Article.recordType-meta.xml
<RecordType>
    <fullName>Informational_Article</fullName>
    <active>true</active>
    <label>Informational Article</label>
</RecordType>