unpackaged/main/default/objects/Knowledge__kav/listViews/CK.listView-meta.xml
<ListView>
    <fullName>CK</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>ABSTRACT</columns>
    <columns>SEO_Additional_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Calvin Klein</value>
    </filters>
    <filters>
        <field>URL_NAME</field>
        <operation>notContain</operation>
        <value>-CA</value>
    </filters>
    <label>CK US</label>
</ListView>