unpackaged/main/default/objects/Knowledge__kav/listViews/CK_CA.listView-meta.xml
<ListView>
    <fullName>CK_CA</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL_NAME</field>
        <operation>contains</operation>
        <value>-CA</value>
    </filters>
    <label>CK CA</label>
</ListView>