unpackaged/main/default/objects/Knowledge__kav/listViews/Tommy_Hilfiger_Articles.listView-meta.xml
<ListView>
    <fullName>Tommy_Hilfiger_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Tommy Hilfiger</value>
    </filters>
    <label>Tommy Hilfiger Articles</label>
</ListView>